# simple-setup

./: .gitignore  README.md  cabal.project  simple-setup.cabal
app/: Main.hs  Specification.hs
